[tool.poetry]
name = "pyally"
version = "0.1.0"
description = "Rewrite PyAlly to be async, without changing much."
authors = ["Kevin Lyter <lyterk@fastmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
